--- a/public/api-data/public/css/about.css
+++ b/public/api-data/public/css/about.css
@@ -4,7 +4,7 @@
     margin-top: 60px;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url(/public/images/bgimages.webp);
+    background-image: url(/public/images/bgimages.png);
 }
 
 .movie-detail{
